--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -43,7 +43,12 @@ $pad-m: 1em;
 $pad-l: 2.5em;
 $pad-xl: 5em;
 
-// TIMENG
+$space-s: 5em;
+$space-m: 7em;
+$space-l: 10em;
+$space-xl: 15em;
+
+// TIMING
 $time-f: 0.3s;
 $time-mf: 0.5s;
 $time-ms: 1s;
