--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -4,7 +4,7 @@
 }
 
 html {
-    font-size: 16px;
+    font-size: 0.85vmax;
     font-family: $paragraph;
 }
 
@@ -18,11 +18,97 @@ body {
 }
 
 .container {
-    margin: 0 auto;
+    width: 100%;
+    padding: 0 $space-s;
 }
 
 strong {
     color: $accent;
+}
+
+a {
+    color: $secondary-shade;
+}
+
+a.btn {
+
+    &:link,
+    &:visited {
+        color: $primary;
+        text-decoration: none;
+
+        text-transform: uppercase;
+
+        width: 50%;
+
+        position: relative;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: $pad-s;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: $secondary;
+            z-index: -1;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            transform: scaleX(0);
+            height: 100%;
+            background-color: $secondary-tint;
+
+            z-index: -1;
+
+            transition: $time-f;
+        }
+
+        &.btn-accent {
+            color: $secondary;
+
+            &::before {
+                background-color: $accent;
+            }
+
+            &::after {
+                background-color: $accent-tint;
+            }
+        }
+    }
+
+    &:hover,
+    &:active {
+        &::after {
+            transform: scaleX(1);
+        }
+    }
+
+}
+
+.fx-shadow {
+    --fx-shadow-color: #{$secondary-shade};
+    box-shadow: 0 5px 0 0 var(--fx-shadow-color);
+
+    &[fx-shadow-direction="right"] {
+        box-shadow: 5px 5px 0 0 var(--fx-shadow-color);
+    }
+
+    &[fx-shadow-direction="left"] {
+        box-shadow: -5px 5px 0 0 var(--fx-shadow-color);
+    }
+
+    &.fx-shadow-accent {
+        --fx-shadow-color: #{$accent-shade};
+    }
 }
 
 h1,
@@ -74,8 +160,4 @@ p {
 small {
     font-size: $small;
     font-family: $paragraph;
-}
-
-a {
-    text-decoration: none;
 }
