--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,59 @@ body {
   margin: 0;
   white-space: nowrap;
   max-width: 100%;
-  width: 100vw;
-  height: 100vh;
+  scrollbar-gutter: stable;
 }
 
 section {
   padding: 5em 0;
   padding: 7em 0;
+}
+
+input,
+textarea {
+  resize: none;
+  padding: 0.5em 1em;
+  font-family: "Roboto Condensed";
+  font-size: 1rem;
+  background-color: hsl(45, 23%, 90%);
+  border: none;
+  transition: 0.3s;
+}
+input:hover, input:active, input:focus,
+textarea:hover,
+textarea:active,
+textarea:focus {
+  background-color: hsl(45, 23%, 100%);
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.checkbox label {
+  color: hsl(45, 23%, 75%);
+}
+.checkbox input {
+  display: inline-block;
+  vertical-align: 8px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+form div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+form .submit {
+  width: 100% !important;
 }
 
 .container {
@@ -40,6 +86,54 @@ hr {
 a {
   color: hsl(45, 23%, 75%);
   transition: 0.3s;
+}
+
+button.btn {
+  color: hsl(0, 0%, 9%);
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+  border-radius: 0;
+  border: none;
+  background-color: transparent;
+}
+button.btn span {
+  z-index: 2;
+}
+button.btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(45, 23%, 90%);
+}
+button.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  transform: scaleX(0);
+  height: 100%;
+  background-color: hsl(45, 23%, 100%);
+  transition: 0.3s;
+}
+button.btn:hover::after, button.btn:active::after {
+  transform: scaleX(1);
+}
+button.btn.btn-accent {
+  color: hsl(45, 23%, 90%);
+}
+button.btn.btn-accent::before {
+  background-color: hsl(348, 100%, 34%);
+}
+button.btn.btn-accent::after {
+  background-color: hsl(348, 100%, 49%);
 }
 
 a.btn:link, a.btn:visited {
@@ -109,6 +203,11 @@ h6,
 p,
 small {
   margin: 0;
+  font-weight: 700;
+}
+
+strong {
+  font-weight: inherit;
 }
 
 h1 {
@@ -147,7 +246,7 @@ p {
 }
 
 small {
-  font-size: 0.7072135785 rem;
+  font-size: 0.8409599149rem;
   font-family: "Roboto Condensed";
 }
 
@@ -199,7 +298,7 @@ body {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 
@@ -327,20 +426,21 @@ section.timeline .timeline__timeline {
 section.timeline .timeline__timeline > * {
   flex-shrink: 0;
 }
-section.timeline .timeline__timeline:hover .event .details,
-section.timeline .timeline__timeline:hover .event .banner {
+section.timeline .timeline__timeline:hover .banner,
+section.timeline .timeline__timeline:hover .details, section.timeline .timeline__timeline:active .banner,
+section.timeline .timeline__timeline:active .details {
   filter: blur(5px);
 }
 section.timeline .timeline__timeline .event {
   width: var(--event-width);
   transition: 0.3s;
 }
-section.timeline .timeline__timeline .event:hover {
-  width: calc(var(--event-width) * 1.5);
-}
-section.timeline .timeline__timeline .event:hover .details,
-section.timeline .timeline__timeline .event:hover .banner {
+section.timeline .timeline__timeline .event:hover .banner,
+section.timeline .timeline__timeline .event:hover .details {
   filter: blur(0);
+}
+section.timeline .timeline__timeline .event:hover .banner .description {
+  transform: scale(1);
 }
 section.timeline .timeline__timeline .details,
 section.timeline .timeline__timeline .banner {
@@ -351,9 +451,6 @@ section.timeline .timeline__timeline .details {
   width: var(--event-width);
   padding: 0 1em;
   margin: 0 auto;
-}
-section.timeline .timeline__timeline .details p {
-  display: none;
 }
 section.timeline .timeline__timeline .line {
   margin: 2em 0;
@@ -380,6 +477,26 @@ section.timeline .timeline__timeline .banner {
   aspect-ratio: 4/3;
   border: 5px solid hsl(45, 23%, 90%);
   margin: 0 1em;
+  display: flex;
+  align-items: end;
+}
+section.timeline .timeline__timeline .banner .description {
+  width: 100%;
+  height: 50%;
+  background-color: hsl(45, 23%, 90%);
+  color: hsl(0, 0%, 9%);
+  transition: 0.3s;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  text-align: center;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5em;
+}
+section.timeline .timeline__timeline .banner .description a {
+  color: hsl(0, 0%, 24%);
 }
 
 section.instructors {
@@ -481,52 +598,41 @@ section.instructors .container .instructors__cards .card .wrapper .links a:hover
   color: hsl(0, 0%, 9%);
 }
 
-section.credentials {
-  position: relative;
+section.contact {
+  background-image: url("../assets/media/contact-bg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-color: hsl(0, 0%, 24%);
+  background-blend-mode: multiply;
 }
-section.credentials .container {
+section.contact .container {
   display: flex;
-  gap: 2em;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  gap: 8em;
 }
-section.credentials .container > div {
+section.contact .container > div {
   width: 50%;
 }
-section.credentials .container .credentials__content {
+section.contact .container .contact__form {
   display: flex;
   flex-direction: column;
   gap: 2em;
 }
-section.credentials .container .credentials__content p {
-  width: 65%;
-}
-section.credentials .container .credentials__asai {
-  text-align: right;
+section.contact .container .contact__form .form__details {
   display: flex;
   flex-direction: column;
-  align-items: end;
   gap: 2em;
 }
-section.credentials .container .credentials__asai div {
-  background-color: hsl(45, 23%, 90%);
-  color: hsl(0, 0%, 9%);
-  width: 65%;
-  padding: 1em;
-  box-shadow: 15px 15px 0 0 hsl(45, 23%, 75%);
-}
-section.credentials .container .credentials__asai .asai__brand {
+section.contact .container .contact__form .form__details .contact__links {
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 2em;
-  text-align: left;
+  font-size: 1.414rem;
+  gap: 1em;
 }
-section.credentials .container .credentials__asai .asai__brand img {
-  width: 15ch;
-  aspect-ratio: 1/1;
+section.contact .container .contact__map iframe {
+  width: 100%;
+  height: 100%;
+  box-shadow: 15px 15px 0 0 hsl(45, 23%, 75%);
+  border: 5px solid hsl(45, 23%, 75%);
 }
 
 /*# sourceMappingURL=main.css.map */
