--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -14,8 +14,12 @@ body {
     margin: 0;
     white-space: nowrap;
     max-width: 100%;
-    width: 100vw;
-    height: 100vh;
+    // Percent is used for the scrollbar in chrome
+    // width: 100%;
+    // height: 100vh;
+
+    // overflow: overlay;
+    scrollbar-gutter: stable;
 }
 
 section {
@@ -24,6 +28,60 @@ section {
     // height: 1px;
     // margin-bottom: $space-s;
     padding: $space-m 0;
+}
+
+input,
+textarea {
+    resize: none;
+
+    padding: $pad-s $pad-m;
+    font-family: $paragraph;
+    font-size: $p;
+
+    background-color: $secondary;
+    border: none;
+
+    transition: $time-f;
+
+    &:hover,
+    &:active,
+    &:focus {
+        background-color: $secondary-tint;
+        border: none;
+        box-shadow: none;
+        outline: none;
+    }
+}
+
+.checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    label {
+        color: $secondary-shade;
+    }
+
+    input {
+        display: inline-block;
+        vertical-align: 8px;
+    }
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: $gap-m;
+
+    div {
+        display: flex;
+        flex-direction: column;
+        gap: $gap-xs;
+    }
+
+    .submit {
+        width: 100% !important;
+    }
 }
 
 .container {
@@ -45,7 +103,76 @@ a {
     transition: $time-f;
 }
 
+button.btn {
+    color: $primary;
+    text-decoration: none;
+
+    text-transform: uppercase;
+
+    width: 50%;
+
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: $pad-s;
+
+    border-radius: 0;
+    border: none;
+
+    background-color: transparent;
+
+    span {
+        z-index: 2;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $secondary;
+        // z-index: -1;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 100%;
+        transform: scaleX(0);
+        height: 100%;
+        background-color: $secondary-tint;
+
+        // z-index: -1;
+
+        transition: $time-f;
+    }
+
+    &:hover,
+    &:active {
+        &::after {
+            transform: scaleX(1);
+        }
+    }
+
+    &.btn-accent {
+        color: $secondary;
+
+        &::before {
+            background-color: $accent;
+        }
+
+        &::after {
+            background-color: $accent-tint;
+        }
+    }
+}
+
 a.btn {
+
 
     &:link,
     &:visited {
@@ -135,6 +262,11 @@ h6,
 p,
 small {
     margin: 0;
+    font-weight: 700;
+}
+
+strong {
+    font-weight: inherit;
 }
 
 h1 {
