--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -25,7 +25,7 @@ $h4: pow($fs-ratio, 3) * 1rem;
 $h5: pow($fs-ratio, 2) * 1rem;
 $h6: pow($fs-ratio, 1) * 1rem;
 $p: 1rem;
-$small: pow($fs-ratio, -1) rem;
+$small: pow($fs-ratio, -0.5) * 1rem;
 
 $lh-h1: $h1 - 2rem;
 
